--- a/main.css
+++ b/main.css
@@ -48,6 +48,11 @@ ul {
   border-radius: 5px;
 }
 
+.item_information {
+  height: 150px;
+  overflow-y: auto;
+}
+
 .bookmark_btn {
   background-color:#FFD80D;
   color: #000;
@@ -80,3 +85,19 @@ ul {
   border: none;
   padding: 10px 28px;
 }
+
+.modal {
+  height: 110vh !important;
+}
+
+.modal_film_img {
+  width: 100%;
+}
+
+.modal-content {
+  padding: 10px;
+  width: auto;
+  height: 300px;
+  overflow-y: auto;
+}
+
